--- a/src/components/movieCard/style.scss
+++ b/src/components/movieCard/style.scss
@@ -42,7 +42,7 @@
             height: 40px;
             position: relative;
             top: 30px;
-            background-color: white;
+            background-color: rgb(163, 17, 17);
             flex-shrink: 0;
             @include md {
                 width: 50px;
